# worker-vllm

./: .gitignore  Dockerfile
.github/workflows/: CI-runpod_dep.yml
modal-deploy/: README.md  client.py  modal_docs.md  vllm_inference.py
modal-deploy/sunflower-grpo-inference-vllm/: .dockerignore  Dockerfile  Makefile  README.md  client.py  fastapi_app.py  main.py  openai_client.py  pyproject.toml  sunflower_14b_openai_vllm_modal.py  sunflower_grpo_combined_inference.ipynb  sunflower_grpo_vllm_modal.py
modal-deploy/sunflower-grpo-inference-vllm/cloudrun/: .gitignore  Makefile  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
modal-deploy/sunflower-grpo-inference-vllm/scripts/: deploy.sh  generate_api_key.sh
modal-deploy/sunflower-grpo-inference-vllm/web/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
modal-deploy/sunflower-grpo-inference-vllm/web/app/: globals.css  layout.tsx  page.tsx
modal-deploy/sunflower-grpo-inference-vllm/web/components/: chat-form.tsx  compare-panel.tsx  language-picker.tsx  sunflower-header.tsx  temperature-slider.tsx  theme-provider.tsx  theme-toggle.tsx  translate-form.tsx
modal-deploy/sunflower-grpo-inference-vllm/web/lib/: api.ts  errors.ts  languages.ts  prompt.ts
sunflower-ultravox-vllm/: .dockerignore  .gcloudignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  app_vast.py  audiobase64.txt  cloudbuildxxx.yaml  loops.txt  omniligual-asr.md  requirements.txt  sunflower-ultravox-cloudrun-deploy-plan.md  test_app.py
(+56 files in other folders)
