[project]
name = "sunflower-grpo-inference-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "modal>=1.4.1",
    "requests>=2.33.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.44.0",
]
